fix: :bug: disabling view transitions on mobile

--- a/src/components/Shell/styles-global.scss
+++ b/src/components/Shell/styles-global.scss
@@ -142,3 +142,15 @@ h6 {
       );
   }
 }
+
+@include belowTurningPoint {
+  ::view-transition-group(*),
+  ::view-transition-old(*),
+  ::view-transition-new(*) {
+    animation: none !important;
+  }
+
+  [data-astro-transition-scope] {
+    animation: none !important;
+  }
+}
